# maya-zcash

./: .gitignore  .gitlab-ci.yml  Cargo.toml  build.rs  config.yaml  package-lock.json  setup-regtest.sh
.github/workflows/: ci-test.yml
docs/: build.md  zcash.conf
flatbuffer/: data.fbs
go/: go.mod  main.go  run-tests.sh  setup.sh
go/fb/: Height.go
go/maya_zcash/: main_go_test.go  mainnet_test.go  maya_zcash.c  maya_zcash.go  maya_zcash.h  regtest_test.go
js/: package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: addr.ts  builder.ts  index.ts  regtest.test.ts  rpc.ts  script.ts  types.d.ts  writer.ts
src/: addr.rs  chain.rs  config.rs  data_generated.rs  interface.udl  lib.rs  network.rs  pay.rs  rpc.rs  scan.rs  wallet.rs
