[package]
edition = "2021"
name = "maya-zcash"
version = "0.1.0"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["rlib", "cdylib"]
name = "maya_zcash"

[dependencies]
anyhow = "1.0.94"
env_logger = "0.11.5"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
parking_lot = "0.12.3"
reqwest = {version = "0.12.9", features = ["json"]}
serde = {version = "1.0.215", features = ["serde_derive"]}
serde_json = "1.0.133"
thiserror = "2.0.4"
tokio = {version = "1.42.0", features = ["tokio-macros", "rt-multi-thread", "time"]}
toml = "0.8.19"
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
uniffi = {version = "0.25", features = ["cli"] }
uuid = {version = "1.11.0", features = ["v4"]}

ripemd = "0.1.1"
sha2 = "0.10.2"
blake2b_simd = "1.0.2"
secp256k1 = "0.27.0"
base58check = "0.1.0"
rand_core = "0.6.4"

zcash_keys = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd", features = ["sapling", "orchard", "test-dependencies"] }
zcash_protocol = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd", features = ["local-consensus"] }
zcash_client_backend = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd", features = [ "transparent-inputs", "orchard" ] }
zcash_primitives = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd", features = [ "transparent-inputs" ] }
zcash_proofs = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd" }
zcash_address = { git = "https://github.com/hhanh00/librustzcash.git", rev = "029c3ddd" }
zcash_encoding = { git = "https://github.com/hhanh00/librustzcash.git",  rev = "029c3ddd" }
zcash_note_encryption = "0.4"
subst = { version = "0.3.5", features = ["yaml"] }

[build-dependencies]
uniffi = {version = "0.25", features = ["build"]}
